--- a/Account/Web.config
+++ b/Account/Web.config
@@ -15,4 +15,8 @@
     </authorization>
   </system.web>
 
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  
 </configuration>
