change table to my table

--- a/Web.config
+++ b/Web.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="CM_Connection" connectionString="data source=localhost;Initial Catalog=TestDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+    <add name="CM_Connection" connectionString="data source=testdb.cq1dxnma3nwn.ap-northeast-1.rds.amazonaws.com,1433; Initial Catalog=TestDB; User ID=gazelle; password=35797333;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+
+  <!--testdb.cq1dxnma3nwn.ap-northeast-1.rds.amazonaws.com,1433-->
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1">
       <assemblies>
